# mt5linux

./: pyproject.toml
mt5linux/: __main__.py
