[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mt5linux"
version = "0.2.0"
description = "MetaTrader5 for linux users"
readme = "README.md"
authors = [
    { name = "Lucas Prett Campagna" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "numpy>1.21.4,<2",
    "plumbum==1.7.0",
    "pyparsing==2.4.7",
    "rpyc==5.2.3",
]

[project.urls]
Homepage = "https://github.com/lucas-campagna/mt5linux"

[tool.hatch.build.targets.wheel]
packages = ["mt5linux"]